--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "atob": "^2.0.3"
+    "atob": "^2.0.3",
+    "btoa": "^1.1.2"
   },
   "devDependencies": {},
   "repository": {
